syntax = "proto3";

option go_package = "github.com/restatedev/documentation/code_snippets/go/codegen/proto";

// <start_service>
// service.proto
package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
// <end_service>

// <start_virtual_object>
import "dev/restate/sdk/go.proto";

service Counter {
  option (dev.restate.sdk.go.service_type) = VIRTUAL_OBJECT;
  rpc Add (AddRequest) returns (AddResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {
    option (dev.restate.sdk.go.handler_type) = SHARED;
  }
}
// <end_virtual_object>

message AddRequest {
  int64 delta = 1;
}

message AddResponse {
  int64 value = 1;
}

message GetRequest {}

message GetResponse {
  int64 value = 1;
}
